[tool.poetry]
name = "ab-testing-from-scratch"
version = "0.1.0"
description = "ab-testing-from-scratch"
authors = ["kevin7lou <1493360+kevin7lou@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.4"
black = "^23.7.0"
scipy = "^1.11.2"
seaborn = ">=0.13.0"
statsmodels = "^0.14.0"
pingouin = "^0.5.3"
expan = "^1.4.0"



[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
